# IanETrading

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.yaml  index.html  pyproject.toml  requirements.txt  run_forever.bat  state.db
.claude/: BACKLOG.md  DECISIONS.md  LESSONS.md  SESSIONS.md  SPRINT.md
app/: DEPRECATED.md  alpaca_client.py  app.py  data_fetcher.py  strategy.py
docs/: Requirements.md  SystemRequest.md  project plan.md  projectPlan.md  requirements.txt
management/: sprint_automation.py
src/: __init__.py  config.py  data_fetcher.py  main_realtime.py  signal_manager.py  trade_executor.py
src/core/: event_bus.py  logging_setup.py  models.py  state_store.py
src/execution/: risk_manager.py  trade_executor.py
src/ingest/: realtime_ingestor.py
src/observe/: monitor_api.py
src/processing/: bar_aggregator.py  strategy_engine.py
src/strategies/: __init__.py  base.py  momentum.py
tests/: conftest.py  test_data_fetcher.py  test_momentum_strategy.py  test_signal_manager.py  test_trade_executor.py
